--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,9 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
-    "defaultCollection": "@datorama/akita"
+    "schematicCollections": [
+      "@datorama/akita"
+    ]
   },
   "version": 1,
   "newProjectRoot": "projects",
@@ -106,6 +108,5 @@
         }
       }
     }
-  },
-  "defaultProject": "todo"
+  }
 }
