Revert "commit before updating angular material to 14"
This reverts commit 0f57febd8b96973c260d270bf907b2a7b4eecb79.

--- a/angular.json
+++ b/angular.json
@@ -1,9 +1,7 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
-    "schematicCollections": [
-      "@datorama/akita"
-    ]
+    "defaultCollection": "@datorama/akita"
   },
   "version": 1,
   "newProjectRoot": "projects",
@@ -108,5 +106,6 @@
         }
       }
     }
-  }
+  },
+  "defaultProject": "todo"
 }
